--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
         <a href="#" class="btn">Download cv</a>
     </div>
     <div class="home-img">
-        <img src="/img/argi.png" alt="">
+        <img src="img/argi.png" alt="">
     </div>
    </section>
 
    <!-- about desing -->
    <section class="about" id="about">
     <div class="about-img">
-        <img src="/img/argi.png" alt="">
+        <img src="img/argi.png" alt="">
     </div>
     <div class="about-content">
         <h2 class="about">ABOUT <span>ME</span></h2>
@@ -97,42 +97,42 @@
 
     <div class="certificate-container">
         <div class="certificate-box">
-            <img src="/img/piagam1.jpeg" alt="">
+            <img src="img/piagam1.jpeg" alt="">
             <div class="certificate-layer">
                 <h4>webinar For Dicoding Academy</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur architecto asperiores, blanditiis, iste minima hic tempore laborum at porro eveniet minus dolorem labore illo odio nemo, quas maxime accusantium culpa.</p>
                 <i class="fa-solid fa-share-from-square"></i>
             </div>
         </div>
-            <img src="/img/piagam2.jpeg" alt="">
+            <img src="img/piagam2.jpeg" alt="">
             <div class="certificate-layer">
                 <h4>Study Web programer</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur architecto asperiores, blanditiis, iste minima hic tempore laborum at porro eveniet minus dolorem labore illo odio nemo, quas maxime accusantium culpa.</p>
                 <i class="fa-solid fa-share-from-square"></i>
             </div>
         </div>
-            <img src="/img/piagam3.jpeg" alt="">
+            <img src="img/piagam3.jpeg" alt="">
             <div class="certificate-layer">
                 <h4>webinar for Dicoding Academy</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur architecto asperiores, blanditiis, iste minima hic tempore laborum at porro eveniet minus dolorem labore illo odio nemo, quas maxime accusantium culpa.</p>
                 <i class="fa-solid fa-share-from-square"></i>
             </div>
         </div>
-            <img src="/img/piagam4.jpeg" alt="">
+            <img src="img/piagam4.jpeg" alt="">
             <div class="certificate-layer">
                 <h4>Workshop AWS CLOUD by DICODING Academy</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur architecto asperiores, blanditiis, iste minima hic tempore laborum at porro eveniet minus dolorem labore illo odio nemo, quas maxime accusantium culpa.</p>
                 <i class="fa-solid fa-share-from-square"></i>
             </div>
         </div>
-            <img src="/img/paiagam5.jpeg" alt="">
+            <img src="img/paiagam5.jpeg" alt="">
             <div class="certificate-layer">
                 <h4>webinar for my skill id</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur architecto asperiores, blanditiis, iste minima hic tempore laborum at porro eveniet minus dolorem labore illo odio nemo, quas maxime accusantium culpa.</p>
                 <i class="fa-solid fa-share-from-square"></i>
             </div>
         </div>
-            <img src="/img/paiagam 6.jpeg" alt="">
+            <img src="img/paiagam 6.jpeg" alt="">
             <div class="certificate-layer">
                 <h4>Moderator for workshop HIMA INFORMATIKA </h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur architecto asperiores, blanditiis, iste minima hic tempore laborum at porro eveniet minus dolorem labore illo odio nemo, quas maxime accusantium culpa.</p>
